# scppin-py

./: .gitignore  .readthedocs.yml  FINAL_SUMMARY.md  LICENSE  MANIFEST.in  PCST_SUBOPTIMALITY_ANALYSIS.md  README.md  diagnostic_script.py  pyproject.toml  requirements.txt  setup.py  test_base_cost_sensitivity.py  test_compare_base_costs.py  test_comparison_base_costs.py  test_cost_to_connect_high_prize.py  test_fdr_1_0.py  test_greedy_vs_pcst.py  test_min_prize_base_cost.py  test_minmax_normalization.py  test_module_structure.py  test_num_clusters.py  test_num_clusters_comprehensive.py  test_pcst_debug.py  test_pcst_edges_debug.py  test_pcst_output.py  test_pcst_simple.py  test_pcst_with_all_nodes.py  test_prize_cost_distribution.py  test_pruning_methods.py  test_pruning_with_num_clusters.py  verify_installation.py
docs/: make.bat
docs/archive/: IMPLEMENTATION_SUMMARY.md  REFACTORING_COMPLETE.md  STATUS.md
docs/source/: conf.py  index.rst  installation.rst  parameters.rst  quickstart.rst  troubleshooting.rst
docs/source/_static/: custom.css
docs/source/_templates/: .gitkeep
docs/source/algorithm/: index.rst  overview.rst
docs/source/api/: index.rst  scppin.rst
docs/source/examples/: basic.rst  index.rst
docs/source/tutorials/: basic_usage.rst  index.rst
examples/: basic_tutorial.py  compare_with_r.py  edge_weights_example.py  example_network.csv  new_api_example.py
scppin/: __init__.py  analyzer.py  graph.py  module.py  pvalues.py  weights.py
scppin/core/: __init__.py  bum_model.py  edge_weights.py  network_utils.py  pcst_solver.py  scoring.py
scppin/visualization/: __init__.py  plotting.py
tests/: __init__.py  test_api.py  test_bum_model.py  test_edge_weights.py  test_integration.py  test_minimal.py  test_network_utils.py  test_new_api.py  test_scoring.py  test_scppin.py  test_string_intersection_nx.py
