[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "scppin"
version = "0.3.1"
description = "Single-cell Protein-Protein Interaction Network Analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
authors = [
    {name = "Shahroze Abbas"}
]
keywords = ["single-cell", "protein-protein interaction", "network analysis", "bioinformatics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.20.0,<2.0",
    "scipy>=1.7.0",
    "igraph>=0.11.0",
    "matplotlib>=3.3.0",
    "pandas>=1.3.0",
    "pcst-fast>=1.0.0",
]

[project.optional-dependencies]
scanpy = [
    "scanpy>=1.8.0",
    "anndata>=0.8.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
docs = [
    "sphinx>=5.0.0",
    "furo>=2023.0.0",
    "sphinx-autodoc-typehints>=1.23.0",
    "sphinx-copybutton>=0.5.0",
    "myst-parser>=1.0.0",
]
all = [
    "scppin[scanpy,dev,docs]",
]

[project.urls]
Homepage = "https://github.com/shahrozeabbas/scppin-py"
Documentation = "https://scppin-py.readthedocs.io"
Repository = "https://github.com/shahrozeabbas/scppin-py"

[tool.setuptools.packages.find]
where = ["."]
include = ["scppin*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=scppin --cov-report=html --cov-report=term"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

